tests/toy/neg/000862_mutation.toylang
program a = { a if a then sleep; } .
